# SwarmathonTNG

./: .gitattributes  README.md  SwarmieInstall.md
classifiers/: CNN_3_class_GB1_folder_wo_Aug_full_wdrop_512_2_27_e15.h5  CNN_3_classes_wAug_full_wdrop_512_2_7_e50.h5  CNN_9010_wAug_160.h5
launch/: rover_gui.launch  swarmie.launch
misc/: rover_onboard_node_launch.sh
src/diagnostics/src/diagnostics/: diags.py
src/mobility/scripts/: core.py  task.py
src/mobility/src/mobility/: planner.py  swarmie.py
src/mobility/src/mobility/behavior/: pickup.py  search.py
src/rqt_rover_gui/src/: rover_gui_plugin.cpp  rover_gui_plugin.h  rover_gui_plugin.ui
src/swarmie/launch/: apriltags.xml  swarmie.xml  tensorflow.xml
src/tensorflow_classifier/: CMakeLists.txt  package.xml
src/tensorflow_classifier/src/: cnn_classifier.py
