<package>

  <name>tensorflow_classifier</name>
  <version>1.0.0</version>
  <description>Tensorflow 2.0 Image Classifier Node</description>

  <maintainer email="swarmathon@cs.unm.edu">NASA Swarmathon</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>apriltags2to1</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>

  <run_depend>apriltags2to1</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>

</package>
